# adamw-bf16

./: README.md  pyproject.toml
src/adamw_bf16/: __init__.py
src/adamw_bf16/stochastic/: __init__.py
