[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adamw_bf16"
version = "0.1.0"
authors = [
  { name="APJC", email="apjc@usa.com" },
]
description = "AdamW Optimizer for bfloat16"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AmericanPresidentJimmyCarter/adamw-bf16"
Issues = "https://github.com/AmericanPresidentJimmyCarter/adamw-bf16/issues"
